<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fernandoperez.lifemanager.activities.ConfigurationListActivity">

    <item
        android:id="@+id/action_addconfig"
        android:orderInCategory="50"
        android:title="@string/action_addconfig"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:title="@string/action_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_aboutus"
        android:orderInCategory="100"
        android:title="@string/action_aboutus"
        app:showAsAction="never" />
</menu>
