<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/spotify_login_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textview_spotify_title"
        android:text="@string/textview_spotify_title"
        android:textSize="28sp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <TextView
        android:id="@+id/textview_spotify_currentlyplaying"
        android:text="@string/textview_spotify_currentlyplaying"
        android:textSize="20sp"

        android:paddingTop="20dp"

        android:layout_below="@+id/textview_spotify_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />

    <TextView
        android:id="@+id/textview_spotify_song"
        android:hint="@string/textview_spotify_song"
        android:textSize="18sp"

        android:paddingLeft="5dp"
        android:paddingRight="5dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/textview_spotify_currentlyplaying"
        android:layout_toRightOf="@id/textview_spotify_currentlyplaying"
        android:layout_toEndOf="@id/textview_spotify_currentlyplaying"
    />

    <TextView
        android:id="@+id/textview_spotify_currentplaylist"
        android:text="@string/textview_spotify_currentplaylist"
        android:textSize="20sp"

        android:paddingTop="20dp"

        android:layout_below="@+id/textview_spotify_currentlyplaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/textview_spotify_playlist"
        android:hint="@string/textview_spotify_playlist"
        android:textSize="18sp"

        android:paddingLeft="5dp"
        android:paddingRight="5dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/textview_spotify_currentplaylist"
        android:layout_toRightOf="@id/textview_spotify_currentplaylist"
        android:layout_toEndOf="@id/textview_spotify_currentplaylist"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_spotify_playlists"
        android:layout_below="@+id/textview_spotify_currentplaylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</RelativeLayout>


