<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview_settings_backup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fernandoperez.lifemanager.activities.BackUpActivity"
    tools:showIn="@layout/activity_back_up"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:id="@+id/relativelayout_settings_backup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        >

        <TextView
            android:id="@+id/textview_settings_backup_localswitchbackup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_settings_backup_localswitchbackup"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            />

        <Switch
            android:id="@+id/switch_settings_backup_localswitchbackup"
            android:layout_alignRight="@id/textview_settings_backup_localswitchbackup"
            android:layout_alignEnd="@id/textview_settings_backup_localswitchbackup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            />

        <RelativeLayout
            android:id="@+id/relativelayout_settings_backup_localbackupONlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_settings_backup_localswitchbackup"
            android:animateLayoutChanges="true"
            android:visibility="gone"
            >

            <Button
                android:id="@+id/button_settings_backup_loadLocalBackup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_settings_backup_backupfolder"
                android:onClick="loadBackUp"
                android:layout_margin="10dp"
                />

            <Button
                android:id="@+id/button_settings_backup_backupnow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_settings_backup_backupnow"
                android:layout_below="@id/button_settings_backup_loadLocalBackup"
                android:onClick="makeBackUp"
                android:layout_margin="10dp"
                />

        </RelativeLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>